BREAKPOINT - experimenting with particle system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,20 @@
         "xmemory": "cpp",
         "xstddef": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
-    }
+        "xutility": "cpp",
+        "chrono": "cpp",
+        "cmath": "cpp",
+        "functional": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "memory": "cpp",
+        "random": "cpp",
+        "ratio": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "xhash": "cpp",
+        "xtree": "cpp",
+        "algorithm": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
